--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Delivery</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Boxicon -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -26,14 +28,29 @@
                 <img src="./image/basket_icon.png" alt="">
                 <span>4</span>
             </div>
-
         </div>
-
-
-
-
         <button>Sign In</button>
     </header>
+    <!-- Home Section -->
+    <section class="home">
+        <div class="home_content">
+            <div class="home_text_content">
+                <h1>Get Fresh <span>Meal</span> in Easy Way</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id perferendis nemo sapiente, numquam
+                    architecto ducimus consectetur eos consequatur voluptate, quam quibusdam non incidunt, atque
+                    perspiciatis.</p>
+                <button>
+                    <div>
+                        Order Now
+                    </div>
+                    <i class='bx bx-right-arrow-alt'></i>
+                </button>
+            </div>
+            <div class="home_image">
+                <img src="./image/main_img.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
