--- a/index.html
+++ b/index.html
@@ -51,6 +51,25 @@
             </div>
         </div>
     </section>
+    <!-- About Section -->
+    <section class="about">
+        <div class="about-content">
+            <div class="about-img">
+                <img src="./image/Food-Plate.png" alt="">
+            </div>
+            <div class="about-text">
+                <div class="heading">
+                    <h1><span>About</span> Us</h1>
+                    <p></p>
+                </div>
+                <h2>Why do you Choose Us</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti explicabo itaque cupiditate odio ea
+                    repudiandae rem ducimus, molestiae distinctio, excepturi quam eos tempora in magnam veritatis, amet
+                    et optio laboriosam.</p>
+                <button>Read More <i class='bx bx-right-arrow-alt'></i></button>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
