--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Hero Section -->
     <header>
         <div class="logo">
             <img src="./image/logo.png" alt="">
@@ -67,6 +68,38 @@
                     repudiandae rem ducimus, molestiae distinctio, excepturi quam eos tempora in magnam veritatis, amet
                     et optio laboriosam.</p>
                 <button>Read More <i class='bx bx-right-arrow-alt'></i></button>
+            </div>
+        </div>
+    </section>
+    <!-- Menu Section -->
+    <section class="menu">
+        <div class="heading-text">
+            <div class="heading">
+                <h1><span>Explore Our</span> Menu</h1>
+                <div></div>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eveniet, aperiam amet mollitia vero dicta?
+            </p>
+        </div>
+        <div class="menu-content">
+            <div class="product-box">
+                <div class="product-img">
+                    <img src="./image/buger.jpg" alt="">
+                </div>
+                <small>Product Category</small>
+                <div class="product-name">Chocolate burger</div>
+                <img src="./image/rating_starts.png" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fuga qui odio voluptates quidem sunt?
+                </p>
+                <div class="addtocart">
+                    <span class="price">$210</span>
+                    <div class="cart-icon">
+                        <a href="#"><i class='bx bx-cart'></i></a>
+                        <div class="popup">
+                            <p>Add to Cart</p><i class='bx bx-heart'></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
