--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
                     <img src="./image/buger.jpg" alt="">
                 </div>
                 <small>Product Category</small>
-                <div class="product-name">Chocolate burger</div>
+                <h2 class="product-name">Chocolate burger</h2>
                 <img src="./image/rating_starts.png" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fuga qui odio voluptates quidem sunt?
+                <p class="product-descritpion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fuga qui
+                    odio voluptates quidem sunt?
                 </p>
                 <div class="addtocart">
                     <span class="price">$210</span>
