--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <img src="./image/logo.png" alt="">
         </div>
         <div class="navbar">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Menu</a>
-            <a href="#">Gallary</a>
-            <a href="#">Contact</a>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#menu">Menu</a>
+            <a href="#gallary">Gallary</a>
+            <a href="#contact">Contact</a>
         </div>
         <div class="header_icon">
             <img src="./image/search_icon.png" alt="">
@@ -33,7 +33,7 @@
         <button>Sign In</button>
     </header>
     <!-- Home Section -->
-    <section class="home">
+    <section class="home" id="home">
         <div class="home_content">
             <div class="home_text_content">
                 <h1>Get Fresh <span>Meal</span> in Easy Way</h1>
@@ -53,7 +53,7 @@
         </div>
     </section>
     <!-- About Section -->
-    <section class="about">
+    <section class="about" id="about">
         <div class="about-content">
             <div class="about-img">
                 <img src="./image/Food-Plate.png" alt="">
@@ -72,7 +72,7 @@
         </div>
     </section>
     <!-- Menu Section -->
-    <section class="menu">
+    <section class="menu" id="menu">
         <div class="heading-text">
             <div class="heading">
                 <h1><span>Explore Our</span> Menu</h1>
@@ -102,8 +102,248 @@
                     </div>
                 </div>
             </div>
+            <div class="product-box">
+                <div class="product-img">
+                    <img src="./image/food_19.png" alt="">
+                </div>
+                <small>Product Category</small>
+                <h2 class="product-name">Chocolate burger</h2>
+                <img src="./image/rating_starts.png" alt="">
+                <p class="product-descritpion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fuga qui
+                    odio voluptates quidem sunt?
+                </p>
+                <div class="addtocart">
+                    <span class="price">$210</span>
+                    <div class="cart-icon">
+                        <a href="#"><i class='bx bx-cart'></i></a>
+                        <div class="popup">
+                            <p>Add to Cart</p><i class='bx bx-heart'></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="product-box">
+                <div class="product-img">
+                    <img src="./image/buger.jpg" alt="">
+                </div>
+                <small>Product Category</small>
+                <h2 class="product-name">Chocolate burger</h2>
+                <img src="./image/rating_starts.png" alt="">
+                <p class="product-descritpion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fuga qui
+                    odio voluptates quidem sunt?
+                </p>
+                <div class="addtocart">
+                    <span class="price">$210</span>
+                    <div class="cart-icon">
+                        <a href="#"><i class='bx bx-cart'></i></a>
+                        <div class="popup">
+                            <p>Add to Cart</p><i class='bx bx-heart'></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="product-box">
+                <div class="product-img">
+                    <img src="./image/buger.jpg" alt="">
+                </div>
+                <small>Product Category</small>
+                <h2 class="product-name">Chocolate burger</h2>
+                <img src="./image/rating_starts.png" alt="">
+                <p class="product-descritpion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fuga qui
+                    odio voluptates quidem sunt?
+                </p>
+                <div class="addtocart">
+                    <span class="price">$210</span>
+                    <div class="cart-icon">
+                        <a href="#"><i class='bx bx-cart'></i></a>
+                        <div class="popup">
+                            <p>Add to Cart</p><i class='bx bx-heart'></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="product-box">
+                <div class="product-img">
+                    <img src="./image/buger.jpg" alt="">
+                </div>
+                <small>Product Category</small>
+                <h2 class="product-name">Chocolate burger</h2>
+                <img src="./image/rating_starts.png" alt="">
+                <p class="product-descritpion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fuga qui
+                    odio voluptates quidem sunt?
+                </p>
+                <div class="addtocart">
+                    <span class="price">$210</span>
+                    <div class="cart-icon">
+                        <a href="#"><i class='bx bx-cart'></i></a>
+                        <div class="popup">
+                            <p>Add to Cart</p><i class='bx bx-heart'></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="product-box">
+                <div class="product-img">
+                    <img src="./image/buger.jpg" alt="">
+                </div>
+                <small>Product Category</small>
+                <h2 class="product-name">Chocolate burger</h2>
+                <img src="./image/rating_starts.png" alt="">
+                <p class="product-descritpion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fuga qui
+                    odio voluptates quidem sunt?
+                </p>
+                <div class="addtocart">
+                    <span class="price">$210</span>
+                    <div class="cart-icon">
+                        <a href="#"><i class='bx bx-cart'></i></a>
+                        <div class="popup">
+                            <p>Add to Cart</p><i class='bx bx-heart'></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="product-box">
+                <div class="product-img">
+                    <img src="./image/buger.jpg" alt="">
+                </div>
+                <small>Product Category</small>
+                <h2 class="product-name">Chocolate burger</h2>
+                <img src="./image/rating_starts.png" alt="">
+                <p class="product-descritpion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fuga qui
+                    odio voluptates quidem sunt?
+                </p>
+                <div class="addtocart">
+                    <span class="price">$210</span>
+                    <div class="cart-icon">
+                        <a href="#"><i class='bx bx-cart'></i></a>
+                        <div class="popup">
+                            <p>Add to Cart</p><i class='bx bx-heart'></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="product-box">
+                <div class="product-img">
+                    <img src="./image/buger.jpg" alt="">
+                </div>
+                <small>Product Category</small>
+                <h2 class="product-name">Chocolate burger</h2>
+                <img src="./image/rating_starts.png" alt="">
+                <p class="product-descritpion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fuga qui
+                    odio voluptates quidem sunt?
+                </p>
+                <div class="addtocart">
+                    <span class="price">$210</span>
+                    <div class="cart-icon">
+                        <a href="#"><i class='bx bx-cart'></i></a>
+                        <div class="popup">
+                            <p>Add to Cart</p><i class='bx bx-heart'></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="product-box">
+                <div class="product-img">
+                    <img src="./image/buger.jpg" alt="">
+                </div>
+                <small>Product Category</small>
+                <h2 class="product-name">Chocolate burger</h2>
+                <img src="./image/rating_starts.png" alt="">
+                <p class="product-descritpion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fuga qui
+                    odio voluptates quidem sunt?
+                </p>
+                <div class="addtocart">
+                    <span class="price">$210</span>
+                    <div class="cart-icon">
+                        <a href="#"><i class='bx bx-cart'></i></a>
+                        <div class="popup">
+                            <p>Add to Cart</p><i class='bx bx-heart'></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="product-box">
+                <div class="product-img">
+                    <img src="./image/buger.jpg" alt="">
+                </div>
+                <small>Product Category</small>
+                <h2 class="product-name">Chocolate burger</h2>
+                <img src="./image/rating_starts.png" alt="">
+                <p class="product-descritpion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fuga qui
+                    odio voluptates quidem sunt?
+                </p>
+                <div class="addtocart">
+                    <span class="price">$210</span>
+                    <div class="cart-icon">
+                        <a href="#"><i class='bx bx-cart'></i></a>
+                        <div class="popup">
+                            <p>Add to Cart</p><i class='bx bx-heart'></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="product-box">
+                <div class="product-img">
+                    <img src="./image/buger.jpg" alt="">
+                </div>
+                <small>Product Category</small>
+                <h2 class="product-name">Chocolate burger</h2>
+                <img src="./image/rating_starts.png" alt="">
+                <p class="product-descritpion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fuga qui
+                    odio voluptates quidem sunt?
+                </p>
+                <div class="addtocart">
+                    <span class="price">$210</span>
+                    <div class="cart-icon">
+                        <a href="#"><i class='bx bx-cart'></i></a>
+                        <div class="popup">
+                            <p>Add to Cart</p><i class='bx bx-heart'></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="product-box">
+                <div class="product-img">
+                    <img src="./image/buger.jpg" alt="">
+                </div>
+                <small>Product Category</small>
+                <h2 class="product-name">Chocolate burger</h2>
+                <img src="./image/rating_starts.png" alt="">
+                <p class="product-descritpion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fuga qui
+                    odio voluptates quidem sunt?
+                </p>
+                <div class="addtocart">
+                    <span class="price">$210</span>
+                    <div class="cart-icon">
+                        <a href="#"><i class='bx bx-cart'></i></a>
+                        <div class="popup">
+                            <p>Add to Cart</p><i class='bx bx-heart'></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="menu-page">
+            <button>1</button>
+            <button>2</button>
+            <p>Next...</p>
+            <button><i class='bx bx-right-arrow-alt'></i></button>
         </div>
     </section>
+
+
+
+
+
+
+    <!-- Swiper js -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <!-- Scroll Relveal -->
+
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+    <!-- Main javascript link  -->
+    <script src="./main.js"></script>
 </body>
 
 </html>
