--- a/index.html
+++ b/index.html
@@ -330,6 +330,62 @@
             <button><i class='bx bx-right-arrow-alt'></i></button>
         </div>
     </section>
+    <section class="gallary">
+        <div class="heading-text">
+            <div class="heading">
+                <h1><span>Our</span> Gallary</h1>
+                <p></p>
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, assumenda?</p>
+        </div>
+        <div class="gallary-content">
+            <div class="gallary-box">
+                <img src="./image/gallary_2.jpg" class="gallary-img" alt="">
+                <div class="gallary-overlay">
+                    <img src="./image/logo.png" alt="">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo optio minus quae quam rerum, eum
+                        ullam harum unde! Inventore, minima?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="gallary-box">
+                <img src="./image/gallary_2.jpg" class="gallary-img" alt="">
+                <div class="gallary-overlay">
+                    <img src="./image/logo.png" alt="">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo optio minus quae quam rerum, eum
+                        ullam harum unde! Inventore, minima?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="gallary-box">
+                <img src="./image/gallary_2.jpg" class="gallary-img" alt="">
+                <div class="gallary-overlay">
+                    <img src="./image/logo.png" alt="">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo optio minus quae quam rerum, eum
+                        ullam harum unde! Inventore, minima?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="gallary-box">
+                <img src="./image/gallary_2.jpg" class="gallary-img" alt="">
+                <div class="gallary-overlay">
+                    <img src="./image/logo.png" alt="">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo optio minus quae quam rerum, eum
+                        ullam harum unde! Inventore, minima?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="gallary-box">
+                <img src="./image/gallary_2.jpg" class="gallary-img" alt="">
+                <div class="gallary-overlay">
+                    <img src="./image/logo.png" alt="">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo optio minus quae quam rerum, eum
+                        ullam harum unde! Inventore, minima?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
