--- a/index.html
+++ b/index.html
@@ -345,7 +345,8 @@
                     <img src="./image/logo.png" alt="">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo optio minus quae quam rerum, eum
                         ullam harum unde! Inventore, minima?</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="#">
+                        <i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="gallary-box">
@@ -384,6 +385,13 @@
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
+        </div>
+        <div class="menu-page">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <p>Next...</p>
+            <button><i class='bx bx-right-arrow-alt'></i></button>
         </div>
     </section>
 
