--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
             <button><i class='bx bx-right-arrow-alt'></i></button>
         </div>
     </section>
+    <!-- Gallary Section -->
     <section class="gallary">
         <div class="heading-text">
             <div class="heading">
@@ -394,8 +395,41 @@
             <button><i class='bx bx-right-arrow-alt'></i></button>
         </div>
     </section>
-
-
+    <!-- Order Section -->
+    <section class="order">
+        <div class="heading-text">
+            <div class="heading">
+                <h1><span> Order</span> Now</h1>
+                <p></p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam architecto sed, libero eius eum quo.</p>
+        </div>
+        <div class="order-section">
+            <div class="order-img">
+                <img src="./image/order_image.png" alt="">
+            </div>
+            <div class="order-text">
+                <h2>Get Favourite dish at door <span>step</span></h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum impedit officiis hic. Eos eaque
+                    repudiandae magnam vero illum dolorum voluptatum?</p>
+                <form action="#">
+                    <div class="input-box">
+                        <input type="text" placeholder="Full Name">
+                        <input type="text" placeholder="Email">
+                    </div>
+                    <div class="input-box">
+                        <input type="text" placeholder="Address">
+                        <input type="text" placeholder="Location">
+                    </div>
+                    <div class="input-box"></div>
+                    <div class="input-box"></div>
+                    <textarea name="" id="" placeholder="Describe Your Location in brief explanation" cols="30"
+                        rows="10"></textarea>
+                    <button>SEND MESSAGE</button>
+                </form>
+            </div>
+        </div>
+    </section>
 
 
 
