--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <!-- Boxicon -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- Swiper Js -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -430,9 +432,33 @@
             </div>
         </div>
     </section>
-
-
-
+    <!-- Testimonial -->
+    <section class="testimonial">
+        <div class="heading-text">
+            <div class="heading">
+                <h1><span> Customer</span> Testimonial</h1>
+                <p></p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam architecto sed, libero eius eum quo.</p>
+        </div>
+        <div class="slider-container swiper">
+            <div class="slider-wrapper">
+                <div class="slider-list swiper-wrapper">
+                    <div class="slider-card swiper-slide">
+                        <img src="./image/review_1.png" alt="">
+                        <h2>Abigail Simon</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam nam quidem, autem illo
+                            explicabo voluptatum nisi ea dicta modi beatae?</p>
+                        <div class="social-media">
+                            <a href="#"><i class='bx bxl-facebook'></i></a>
+                            <a href="#"><i class='bx bxl-instagram'></i></a>
+                            <a href="#"><i class='bx bxl-linkedin'></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
