--- a/index.html
+++ b/index.html
@@ -455,7 +455,24 @@
                             <a href="#"><i class='bx bxl-linkedin'></i></a>
                         </div>
                     </div>
+                    <div class="slider-card swiper-slide">
+                        <img src="./image/review_1.png" alt="">
+                        <h2>Abigail Simon</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam nam quidem, autem illo
+                            explicabo voluptatum nisi ea dicta modi beatae?</p>
+                        <div class="social-media">
+                            <a href="#"><i class='bx bxl-facebook'></i></a>
+                            <a href="#"><i class='bx bxl-instagram'></i></a>
+                            <a href="#"><i class='bx bxl-linkedin'></i></a>
+                        </div>
+                    </div>
                 </div>
+
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
         </div>
     </section>
