--- a/index.html
+++ b/index.html
@@ -476,6 +476,32 @@
             </div>
         </div>
     </section>
+    <!-- Contact -->
+    <section class="contact">
+        <div class="heading-text">
+            <div class="heading">
+                <h1><span> Contact</span> Us</h1>
+                <p></p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam architecto sed, libero eius eum quo.</p>
+        </div>
+        <div class="contact-section">
+            <div class="contact-img">
+                <img src="./image/contact_img.png" alt="">
+            </div>
+            <div class="contact-text">
+                <b><span>Our</span> Kitchen</b>
+                <p><i class='bx bx-map'></i> New york City USA.</p>
+                <p><i class='bx bx-phone'></i> Tell : +234 399989 <br> <br> <i class='bx bx-envelope'></i> Email:
+                    tomato@gmail.com</p>
+                <div class="social-media">
+                    <a href="#"><i class='bx bxl-facebook'></i></a>
+                    <a href="#"><i class='bx bxl-instagram'></i></a>
+                    <a href="#"><i class='bx bxl-linkedin'></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
