--- a/index.html
+++ b/index.html
@@ -501,8 +501,53 @@
                 </div>
             </div>
         </div>
+        <div class="contact-input">
+            <h2>Send Us <span>Email</span> to be one of our best Customer</h2>
+            <div>
+                <input type="text" placeholder="Enter Email">
+                <button>Submit</button>
+            </div>
+        </div>
     </section>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-left">
+                <div>
+                    <img src="./image/logo.png" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit optio esse quas velit harum
+                    doloribus blanditiis voluptatem laudantium quaerat nisi necessitatibus facilis eius tempore ab
+                    commodi nulla non beatae aliquid, laborum atque explicabo facere est quo tenetur. Dicta, expedita
+                    eaque.</p>
+                <div class="social-media">
+                    <a href="#"><i class='bx bxl-facebook'></i></a>
+                    <a href="#"><i class='bx bxl-instagram'></i></a>
+                    <a href="#"><i class='bx bxl-linkedin'></i></a>
+                </div>
+            </div>
+            <div class="footer-center">
+                <h2>CONTENT</h2>
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#menu">Menu</a>
+                <a href="#gallary">Gallary</a>
+                <a href="#contact">Contact</a>
+            </div>
+            <div class="footer-right">
+                <h2>GET IN TOUCH</h2>
+                <div class="footer-right-text">
+                    <p><i class='bx bx-map'></i> New york City USA.</p>
+                    <p><i class='bx bx-phone'></i> Tell : +234 399989</p>
+                    <p><i class='bx bx-envelope'></i> Email:
+                        tomato@gmail.com</p>
+                </div>
 
+            </div>
+        </div>
+        <hr>
+
+        <p class="copyright">Copyright &copy; 2024 By MCS | All Right Reserved</p>
+    </footer>
     <!-- Swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
